@@ -154,7 +154,7 @@ void CImportFile::MergeDupes()
 		item_delete:
 			delete m_pCurSer->m_pObj;
 			delete m_pCurSer;
-			iRemoved ++;
+			++iRemoved;
 			continue;
 		}
 
@@ -206,7 +206,7 @@ void CImportFile::Migrate()
 		item_delete:
 			delete m_pCurSer->m_pObj;
 			delete m_pCurSer;
-			iRemoved ++;
+			++iRemoved;
 			continue;
 		}
 
@@ -740,7 +740,7 @@ bool CWorld::DumpAreas( CTextConsole * pSrc, LPCTSTR pszFilename )
 		return( false );
 
 	if ( pszFilename == NULL || *pszFilename == '\0' )
-		pszFilename	= "map_all" SPHERE_SCRIPT;
+		pszFilename	= "map_all" SPHERE_FILE_EXT_SCP;
 	else if ( strlen( pszFilename ) <= 4 )
 		return( false );
 
@@ -751,7 +751,7 @@ bool CWorld::DumpAreas( CTextConsole * pSrc, LPCTSTR pszFilename )
 	s.Printf("// World areas, generated by " SPHERE_TITLE " at %s\n", CGTime::GetCurrentTime().Format(NULL));
 
 	size_t iMax = g_Cfg.m_RegionDefs.GetCount();
-	for ( size_t i = 0; i < iMax; i++ )
+	for ( size_t i = 0; i < iMax; ++i )
 	{
 		CRegionBase * pRegion = g_Cfg.m_RegionDefs.GetAt(i);
 		if ( !pRegion  )
