@@ -4,7 +4,7 @@
 // You may not use this file except in compliance with the License.
 // You may obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0
 //****************************************************************************
-// FILE LAST UPDATED: Thursday, Mar 4, 2021
+// FILE LAST UPDATED: Wednesday, Mar 10, 2021
 
 // WARNING: Modifing this file, without knowing what you are doing, can make Sphere behave incorrectly.
 
@@ -22,6 +22,7 @@ ENC_TFISH  3 // Twofish
 
 [SPHERECRYPT]
 //Classic Clients
+7009000 03C1CE85D 0AA75A27F ENC_TFISH // 7.0.90
 7008900 03CD6426D 0AA193E7F ENC_TFISH // 7.0.89
 7008800 03CEF207D 0AA1D527F ENC_TFISH // 7.0.88
 7008700 03CA0828D 0AA317E7F ENC_TFISH // 7.0.87
@@ -171,6 +172,7 @@ ENC_TFISH  3 // Twofish
 2000000 02D13A5FD 0A39D527F ENC_BFISH // 2.0.0
 
 //Enhanced Clients
+067900900 01E1CE85D 0BB75A27F ENC_TFISH // 4.0.90
 067900890 01ED6426D 0BB193E7F ENC_TFISH // 4.0.89
 067900880 01EEF207D 0BB1D527F ENC_TFISH // 4.0.88
 067900870 01EA0828D 0BB317E7F ENC_TFISH // 4.0.87
